Removed side-bar z-index (it was set to 999). Fixes xibosignage/xibo#355

--- a/theme/default/css/dashboard.css
+++ b/theme/default/css/dashboard.css
@@ -30,7 +30,6 @@ body {
   width: 180px;
   position: fixed;
   height: 100%;
-  z-index: 999;
 }
 .green {
   background: #23ae89 !important;
